--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,20 @@
 # Setup
-title:        Project or Site name
-tagline:      A responsive theme for your project on GitHub Pages
+title:        Personalized Budget Coaching
+tagline:      Empowering you to take control of your financial life
 baseurl:      ""
 paginate:     1
 
 # About/contact
 author:
-  name:       Author name
-  url:        http://yourhomepage.com 
+  name:       Curt Nordhielm
+  url:        http://budgetcoachcurt.com
 
 # Gems
 gems:
   - jekyll-paginate
 
 #Others
-markdown: redcarpet
+markdown: kramdown
 
 exclude:
   - vendor
